--- a/spellBook/package.json
+++ b/spellBook/package.json
@@ -6,6 +6,7 @@
     "start": "node ./src/bin/www"
   },
   "dependencies": {
+    "axios": "^0.24.0",
     "bcryptjs": "^2.4.3",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
@@ -18,6 +19,7 @@
     "morgan": "~1.9.1",
     "multer": "^1.4.3",
     "mysql2": "^2.3.1",
+    "node-fetch": "^2.6.5",
     "sequelize": "^6.7.0"
   }
 }
